package technologiaprogramowania;

public class ClassA {
    public void printMessage() {
        System.out.println("To jest klasa ClassA");
    }
    public String getMessage() {
        return "To jest klasa ClassA";
    }
}
//