package technologiaprogramowania;

public class ClassB {
    public void printMessage() {
        System.out.println("To jest klasa ClassB");
    }
    public String getMessage() {
        return "To jest klasa ClassB";
    }
}
