package technologiaprogramowania;

public class Main {
    public static void main(String[] args) {
        ClassA classA = new ClassA();
        ClassB classB = new ClassB();

        classA.printMessage();
        classB.printMessage();
    }
}
//